document rootを/src/vue/publicとしました

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,10 @@
 server {
     listen 80;
     index index.php index.html;
-    root /src/product_name/public;
+    root /src/vue/public;
 
     location / {
-    root   /src/product_name/public;
+    root   /src/vue/public;
     index  index.html index.php;
     }
 
