nginxの読み取りファイルを追加しました

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,11 @@
 server {
     listen 80;
     index index.php index.html;
-    root /src/vue/public;
+    root /src/vue.js-test/public;
 
     location / {
-    root   /src/vue/public;
-    index  index.html index.php;
+    root   /src/vue.js-test/public;
+    index  index.html index.php index.xml;
     }
 
     location ~ \.php$ {
